--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="nav_list">
                     <ul>
-                        <li class="orange"><a href="#">Home</a></li>
+                        <li><a href="#" class="orange">Home</a></li>
                         <li><a href="#">News</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Products</a></li>
